QueryFiltering/LinqToQuerystring/AntlrGenerated/LinqToQuerystringParser.cs
using System;
using System.IO;
using Antlr4.Runtime;
using Antlr4.Runtime.Atn;
using Antlr4.Runtime.Misc;
using Antlr4.Runtime.Tree;
using DFA = Antlr4.Runtime.Dfa.DFA;

namespace LinqToQuerystring.AntlrGenerated
{
    internal class LinqToQuerystringParser : Parser
    {
        protected static DFA[] decisionToDFA;
        protected static PredictionContextCache sharedContextCache = new PredictionContextCache();
        public const int
            T__0 = 1, T__1 = 2, T__2 = 3, T__3 = 4, T__4 = 5, T__5 = 6, T__6 = 7, T__7 = 8, T__8 = 9,
            T__9 = 10, OR = 11, AND = 12, NOT = 13, EQUALS = 14, NOTEQUALS = 15, GREATERTHAN = 16,
            GREATERTHANOREQUAL = 17, LESSTHAN = 18, LESSTHANOREQUAL = 19, ASC = 20, DESC = 21,
            TOUPPER = 22, TOLOWER = 23, STARTSWITH = 24, ENDSWITH = 25, INT = 26, LONG = 27, DOUBLE = 28,
            FLOAT = 29, DECIMAL = 30, BOOL = 31, GUID = 32, NULL = 33, DATETIME = 34, STRING = 35,
            PROPERTYACCESS = 36, WHITESPACE = 37;
        public const int
            RULE_query = 0, RULE_queryFunction = 1, RULE_top = 2, RULE_skip = 3, RULE_orderBy = 4,
            RULE_orderByExpression = 5, RULE_orderByAtom = 6, RULE_select = 7, RULE_selectExpression = 8,
            RULE_where = 9, RULE_whereExpression = 10, RULE_whereAtom = 11, RULE_boolExpression = 12,
            RULE_atom = 13, RULE_property = 14, RULE_constant = 15, RULE_function = 16;
        public static readonly string[] ruleNames = {
            "query", "queryFunction", "top", "skip", "orderBy", "orderByExpression",
            "orderByAtom", "select", "selectExpression", "where", "whereExpression",
            "whereAtom", "boolExpression", "atom", "property", "constant", "function"
        };

        private static readonly string[] _LiteralNames = {
            null, "'?'", "'&'", "'$top='", "'$skip='", "'$orderBy='", "','", "'$select='",
            "'$where='", "'('", "')'", "'or'", "'and'", "'not'", "'eq'", "'ne'", "'gt'",
            "'ge'", "'lt'", "'le'", "'asc'", "'desc'", "'toupper'", "'tolower'", "'startswith'",
            "'endswith'", null, null, null, null, null, null, null, "'null'"
        };
        private static readonly string[] _SymbolicNames = {
            null, null, null, null, null, null, null, null, null, null, null, "OR",
            "AND", "NOT", "EQUALS", "NOTEQUALS", "GREATERTHAN", "GREATERTHANOREQUAL",
            "LESSTHAN", "LESSTHANOREQUAL", "ASC", "DESC", "TOUPPER", "TOLOWER", "STARTSWITH",
            "ENDSWITH", "INT", "LONG", "DOUBLE", "FLOAT", "DECIMAL", "BOOL", "GUID",
            "NULL", "DATETIME", "STRING", "PROPERTYACCESS", "WHITESPACE"
        };
        public static readonly IVocabulary DefaultVocabulary = new Vocabulary(_LiteralNames, _SymbolicNames);

        [NotNull]
        public override IVocabulary Vocabulary => DefaultVocabulary;

        public override string GrammarFileName => "LinqToQuerystring.g4";

        public override string[] RuleNames => ruleNames;

        public override string SerializedAtn => new string(_serializedATN);

        static LinqToQuerystringParser()
        {
            decisionToDFA = new DFA[_ATN.NumberOfDecisions];
            for (int i = 0; i < _ATN.NumberOfDecisions; i++)
            {
                decisionToDFA[i] = new DFA(_ATN.GetDecisionState(i), i);
            }
        }

        public LinqToQuerystringParser(ITokenStream input) : this(input, Console.Out, Console.Error) { }

        public LinqToQuerystringParser(ITokenStream input, TextWriter output, TextWriter errorOutput)
            : base(input, output, errorOutput)
        {
            Interpreter = new ParserATNSimulator(this, _ATN, decisionToDFA, sharedContextCache);
        }

        public partial class QueryContext : ParserRuleContext
        {
            public QueryFunctionContext[] queryFunction()
            {
                return GetRuleContexts<QueryFunctionContext>();
            }
            public QueryFunctionContext queryFunction(int i)
            {
                return GetRuleContext<QueryFunctionContext>(i);
            }
            public QueryContext(ParserRuleContext parent, int invokingState)
                : base(parent, invokingState)
            {
            }
            public override int RuleIndex { get { return RULE_query; } }
            public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor)
            {
                ILinqToQuerystringVisitor<TResult> typedVisitor = visitor as ILinqToQuerystringVisitor<TResult>;
                if (typedVisitor != null) return typedVisitor.VisitQuery(this);
                else return visitor.VisitChildren(this);
            }
        }

        [RuleVersion(0)]
        public QueryContext query()
        {
            QueryContext _localctx = new QueryContext(Context, State);
            EnterRule(_localctx, 0, RULE_query);
            int _la;
            try
            {
                EnterOuterAlt(_localctx, 1);
                {
                    State = 45;
                    ErrorHandler.Sync(this);
                    _la = TokenStream.LA(1);
                    if ((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << T__0) | (1L << T__2) | (1L << T__3) | (1L << T__4) | (1L << T__6) | (1L << T__7))) != 0))
                    {
                        {
                            State = 35;
                            ErrorHandler.Sync(this);
                            _la = TokenStream.LA(1);
                            if (_la == T__0)
                            {
                                {
                                    State = 34; Match(T__0);
                                }
                            }

                            State = 37; queryFunction();
                            State = 42;
                            ErrorHandler.Sync(this);
                            _la = TokenStream.LA(1);
                            while (_la == T__1)
                            {
                                {
                                    {
                                        State = 38; Match(T__1);
                                        State = 39; queryFunction();
                                    }
                                }
                                State = 44;
                                ErrorHandler.Sync(this);
                                _la = TokenStream.LA(1);
                            }
                        }
                    }

                }
            }
            catch (RecognitionException re)
            {
                _localctx.exception = re;
                ErrorHandler.ReportError(this, re);
                ErrorHandler.Recover(this, re);
            }
            finally
            {
                ExitRule();
            }
            return _localctx;
        }

        public partial class QueryFunctionContext : ParserRuleContext
        {
            public TopContext top()
            {
                return GetRuleContext<TopContext>(0);
            }
            public SkipContext skip()
            {
                return GetRuleContext<SkipContext>(0);
            }
            public OrderByContext orderBy()
            {
                return GetRuleContext<OrderByContext>(0);
            }
            public SelectContext select()
            {
                return GetRuleContext<SelectContext>(0);
            }
            public WhereContext where()
            {
                return GetRuleContext<WhereContext>(0);
            }
            public QueryFunctionContext(ParserRuleContext parent, int invokingState)
                : base(parent, invokingState)
            {
            }
            public override int RuleIndex { get { return RULE_queryFunction; } }
            public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor)
            {
                ILinqToQuerystringVisitor<TResult> typedVisitor = visitor as ILinqToQuerystringVisitor<TResult>;
                if (typedVisitor != null) return typedVisitor.VisitQueryFunction(this);
                else return visitor.VisitChildren(this);
            }
        }

        [RuleVersion(0)]
        public QueryFunctionContext queryFunction()
        {
            QueryFunctionContext _localctx = new QueryFunctionContext(Context, State);
            EnterRule(_localctx, 2, RULE_queryFunction);
            try
            {
                State = 52;
                ErrorHandler.Sync(this);
                switch (TokenStream.LA(1))
                {
                    case T__2:
                        EnterOuterAlt(_localctx, 1);
                        {
                            State = 47; top();
                        }
                        break;
                    case T__3:
                        EnterOuterAlt(_localctx, 2);
                        {
                            State = 48; skip();
                        }
                        break;
                    case T__4:
                        EnterOuterAlt(_localctx, 3);
                        {
                            State = 49; orderBy();
                        }
                        break;
                    case T__6:
                        EnterOuterAlt(_localctx, 4);
                        {
                            State = 50; select();
                        }
                        break;
                    case T__7:
                        EnterOuterAlt(_localctx, 5);
                        {
                            State = 51; where();
                        }
                        break;
                    default:
                        throw new NoViableAltException(this);
                }
            }
            catch (RecognitionException re)
            {
                _localctx.exception = re;
                ErrorHandler.ReportError(this, re);
                ErrorHandler.Recover(this, re);
            }
            finally
            {
                ExitRule();
            }
            return _localctx;
        }

        public partial class TopContext : ParserRuleContext
        {
            public IToken count;
            public ITerminalNode INT() { return GetToken(LinqToQuerystringParser.INT, 0); }
            public TopContext(ParserRuleContext parent, int invokingState)
                : base(parent, invokingState)
            {
            }
            public override int RuleIndex { get { return RULE_top; } }
            public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor)
            {
                ILinqToQuerystringVisitor<TResult> typedVisitor = visitor as ILinqToQuerystringVisitor<TResult>;
                if (typedVisitor != null) return typedVisitor.VisitTop(this);
                else return visitor.VisitChildren(this);
            }
        }

        [RuleVersion(0)]
        public TopContext top()
        {
            TopContext _localctx = new TopContext(Context, State);
            EnterRule(_localctx, 4, RULE_top);
            try
            {
                EnterOuterAlt(_localctx, 1);
                {
                    State = 54; Match(T__2);
                    State = 55; _localctx.count = Match(INT);
                }
            }
            catch (RecognitionException re)
            {
                _localctx.exception = re;
                ErrorHandler.ReportError(this, re);
                ErrorHandler.Recover(this, re);
            }
            finally
            {
                ExitRule();
            }
            return _localctx;
        }

        public partial class SkipContext : ParserRuleContext
        {
            public IToken count;
            public ITerminalNode INT() { return GetToken(LinqToQuerystringParser.INT, 0); }
            public SkipContext(ParserRuleContext parent, int invokingState)
                : base(parent, invokingState)
            {
            }
            public override int RuleIndex { get { return RULE_skip; } }
            public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor)
            {
                ILinqToQuerystringVisitor<TResult> typedVisitor = visitor as ILinqToQuerystringVisitor<TResult>;
                if (typedVisitor != null) return typedVisitor.VisitSkip(this);
                else return visitor.VisitChildren(this);
            }
        }

        [RuleVersion(0)]
        public SkipContext skip()
        {
            SkipContext _localctx = new SkipContext(Context, State);
            EnterRule(_localctx, 6, RULE_skip);
            try
            {
                EnterOuterAlt(_localctx, 1);
                {
                    State = 57; Match(T__3);
                    State = 58; _localctx.count = Match(INT);
                }
            }
            catch (RecognitionException re)
            {
                _localctx.exception = re;
                ErrorHandler.ReportError(this, re);
                ErrorHandler.Recover(this, re);
            }
            finally
            {
                ExitRule();
            }
            return _localctx;
        }

        public partial class OrderByContext : ParserRuleContext
        {
            public OrderByExpressionContext expression;
            public OrderByExpressionContext orderByExpression()
            {
                return GetRuleContext<OrderByExpressionContext>(0);
            }
            public OrderByContext(ParserRuleContext parent, int invokingState)
                : base(parent, invokingState)
            {
            }
            public override int RuleIndex { get { return RULE_orderBy; } }
            public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor)
            {
                ILinqToQuerystringVisitor<TResult> typedVisitor = visitor as ILinqToQuerystringVisitor<TResult>;
                if (typedVisitor != null) return typedVisitor.VisitOrderBy(this);
                else return visitor.VisitChildren(this);
            }
        }

        [RuleVersion(0)]
        public OrderByContext orderBy()
        {
            OrderByContext _localctx = new OrderByContext(Context, State);
            EnterRule(_localctx, 8, RULE_orderBy);
            try
            {
                EnterOuterAlt(_localctx, 1);
                {
                    State = 60; Match(T__4);
                    State = 61; _localctx.expression = orderByExpression();
                }
            }
            catch (RecognitionException re)
            {
                _localctx.exception = re;
                ErrorHandler.ReportError(this, re);
                ErrorHandler.Recover(this, re);
            }
            finally
            {
                ExitRule();
            }
            return _localctx;
        }

        public partial class OrderByExpressionContext : ParserRuleContext
        {
            public OrderByAtomContext[] orderByAtom()
            {
                return GetRuleContexts<OrderByAtomContext>();
            }
            public OrderByAtomContext orderByAtom(int i)
            {
                return GetRuleContext<OrderByAtomContext>(i);
            }
            public OrderByExpressionContext(ParserRuleContext parent, int invokingState)
                : base(parent, invokingState)
            {
            }
            public override int RuleIndex { get { return RULE_orderByExpression; } }
            public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor)
            {
                ILinqToQuerystringVisitor<TResult> typedVisitor = visitor as ILinqToQuerystringVisitor<TResult>;
                if (typedVisitor != null) return typedVisitor.VisitOrderByExpression(this);
                else return visitor.VisitChildren(this);
            }
        }

        [RuleVersion(0)]
        public OrderByExpressionContext orderByExpression()
        {
            OrderByExpressionContext _localctx = new OrderByExpressionContext(Context, State);
            EnterRule(_localctx, 10, RULE_orderByExpression);
            int _la;
            try
            {
                EnterOuterAlt(_localctx, 1);
                {
                    State = 63; orderByAtom(true);
                    State = 68;
                    ErrorHandler.Sync(this);
                    _la = TokenStream.LA(1);
                    while (_la == T__5)
                    {
                        {
                            {
                                State = 64; Match(T__5);
                                State = 65; orderByAtom(false);
                            }
                        }
                        State = 70;
                        ErrorHandler.Sync(this);
                        _la = TokenStream.LA(1);
                    }
                }
            }
            catch (RecognitionException re)
            {
                _localctx.exception = re;
                ErrorHandler.ReportError(this, re);
                ErrorHandler.Recover(this, re);
            }
            finally
            {
                ExitRule();
            }
            return _localctx;
        }

        public partial class OrderByAtomContext : ParserRuleContext
        {
            public bool isFirstSort;
            public IToken propertyName;
            public IToken sortType;
            public ITerminalNode PROPERTYACCESS() { return GetToken(LinqToQuerystringParser.PROPERTYACCESS, 0); }
            public ITerminalNode ASC() { return GetToken(LinqToQuerystringParser.ASC, 0); }
            public ITerminalNode DESC() { return GetToken(LinqToQuerystringParser.DESC, 0); }
            public OrderByAtomContext(ParserRuleContext parent, int invokingState) : base(parent, invokingState) { }
            public OrderByAtomContext(ParserRuleContext parent, int invokingState, bool isFirstSort)
                : base(parent, invokingState)
            {
                this.isFirstSort = isFirstSort;
            }
            public override int RuleIndex { get { return RULE_orderByAtom; } }
            public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor)
            {
                ILinqToQuerystringVisitor<TResult> typedVisitor = visitor as ILinqToQuerystringVisitor<TResult>;
                if (typedVisitor != null) return typedVisitor.VisitOrderByAtom(this);
                else return visitor.VisitChildren(this);
            }
        }

        [RuleVersion(0)]
        public OrderByAtomContext orderByAtom(bool isFirstSort)
        {
            OrderByAtomContext _localctx = new OrderByAtomContext(Context, State, isFirstSort);
            EnterRule(_localctx, 12, RULE_orderByAtom);
            int _la;
            try
            {
                EnterOuterAlt(_localctx, 1);
                {
                    State = 71; _localctx.propertyName = Match(PROPERTYACCESS);
                    State = 73;
                    ErrorHandler.Sync(this);
                    _la = TokenStream.LA(1);
                    if (_la == ASC || _la == DESC)
                    {
                        {
                            State = 72;
                            _localctx.sortType = TokenStream.LT(1);
                            _la = TokenStream.LA(1);
                            if (!(_la == ASC || _la == DESC))
                            {
                                _localctx.sortType = ErrorHandler.RecoverInline(this);
                            }
                            else
                            {
                                ErrorHandler.ReportMatch(this);
                                Consume();
                            }
                        }
                    }

                }
            }
            catch (RecognitionException re)
            {
                _localctx.exception = re;
                ErrorHandler.ReportError(this, re);
                ErrorHandler.Recover(this, re);
            }
            finally
            {
                ExitRule();
            }
            return _localctx;
        }

        public partial class SelectContext : ParserRuleContext
        {
            public SelectExpressionContext expression;
            public SelectExpressionContext selectExpression()
            {
                return GetRuleContext<SelectExpressionContext>(0);
            }
            public SelectContext(ParserRuleContext parent, int invokingState)
                : base(parent, invokingState)
            {
            }
            public override int RuleIndex { get { return RULE_select; } }
            public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor)
            {
                ILinqToQuerystringVisitor<TResult> typedVisitor = visitor as ILinqToQuerystringVisitor<TResult>;
                if (typedVisitor != null) return typedVisitor.VisitSelect(this);
                else return visitor.VisitChildren(this);
            }
        }

        [RuleVersion(0)]
        public SelectContext select()
        {
            SelectContext _localctx = new SelectContext(Context, State);
            EnterRule(_localctx, 14, RULE_select);
            try
            {
                EnterOuterAlt(_localctx, 1);
                {
                    State = 75; Match(T__6);
                    State = 76; _localctx.expression = selectExpression();
                }
            }
            catch (RecognitionException re)
            {
                _localctx.exception = re;
                ErrorHandler.ReportError(this, re);
                ErrorHandler.Recover(this, re);
            }
            finally
            {
                ExitRule();
            }
            return _localctx;
        }

        public partial class SelectExpressionContext : ParserRuleContext
        {
            public ITerminalNode[] PROPERTYACCESS() { return GetTokens(LinqToQuerystringParser.PROPERTYACCESS); }
            public ITerminalNode PROPERTYACCESS(int i)
            {
                return GetToken(LinqToQuerystringParser.PROPERTYACCESS, i);
            }
            public SelectExpressionContext(ParserRuleContext parent, int invokingState)
                : base(parent, invokingState)
            {
            }
            public override int RuleIndex { get { return RULE_selectExpression; } }
            public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor)
            {
                ILinqToQuerystringVisitor<TResult> typedVisitor = visitor as ILinqToQuerystringVisitor<TResult>;
                if (typedVisitor != null) return typedVisitor.VisitSelectExpression(this);
                else return visitor.VisitChildren(this);
            }
        }

        [RuleVersion(0)]
        public SelectExpressionContext selectExpression()
        {
            SelectExpressionContext _localctx = new SelectExpressionContext(Context, State);
            EnterRule(_localctx, 16, RULE_selectExpression);
            int _la;
            try
            {
                EnterOuterAlt(_localctx, 1);
                {
                    State = 78; Match(PROPERTYACCESS);
                    State = 83;
                    ErrorHandler.Sync(this);
                    _la = TokenStream.LA(1);
                    while (_la == T__5)
                    {
                        {
                            {
                                State = 79; Match(T__5);
                                State = 80; Match(PROPERTYACCESS);
                            }
                        }
                        State = 85;
                        ErrorHandler.Sync(this);
                        _la = TokenStream.LA(1);
                    }
                }
            }
            catch (RecognitionException re)
            {
                _localctx.exception = re;
                ErrorHandler.ReportError(this, re);
                ErrorHandler.Recover(this, re);
            }
            finally
            {
                ExitRule();
            }
            return _localctx;
        }

        public partial class WhereContext : ParserRuleContext
        {
            public WhereExpressionContext expression;
            public WhereExpressionContext whereExpression()
            {
                return GetRuleContext<WhereExpressionContext>(0);
            }
            public WhereContext(ParserRuleContext parent, int invokingState)
                : base(parent, invokingState)
            {
            }
            public override int RuleIndex { get { return RULE_where; } }
            public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor)
            {
                ILinqToQuerystringVisitor<TResult> typedVisitor = visitor as ILinqToQuerystringVisitor<TResult>;
                if (typedVisitor != null) return typedVisitor.VisitWhere(this);
                else return visitor.VisitChildren(this);
            }
        }

        [RuleVersion(0)]
        public WhereContext where()
        {
            WhereContext _localctx = new WhereContext(Context, State);
            EnterRule(_localctx, 18, RULE_where);
            try
            {
                EnterOuterAlt(_localctx, 1);
                {
                    State = 86; Match(T__7);
                    State = 87; _localctx.expression = whereExpression();
                }
            }
            catch (RecognitionException re)
            {
                _localctx.exception = re;
                ErrorHandler.ReportError(this, re);
                ErrorHandler.Recover(this, re);
            }
            finally
            {
                ExitRule();
            }
            return _localctx;
        }

        public partial class WhereExpressionContext : ParserRuleContext
        {
            public WhereAtomContext[] whereAtom()
            {
                return GetRuleContexts<WhereAtomContext>();
            }
            public WhereAtomContext whereAtom(int i)
            {
                return GetRuleContext<WhereAtomContext>(i);
            }
            public ITerminalNode[] OR() { return GetTokens(LinqToQuerystringParser.OR); }
            public ITerminalNode OR(int i)
            {
                return GetToken(LinqToQuerystringParser.OR, i);
            }
            public ITerminalNode[] AND() { return GetTokens(LinqToQuerystringParser.AND); }
            public ITerminalNode AND(int i)
            {
                return GetToken(LinqToQuerystringParser.AND, i);
            }
            public WhereExpressionContext(ParserRuleContext parent, int invokingState)
                : base(parent, invokingState)
            {
            }
            public override int RuleIndex { get { return RULE_whereExpression; } }
            public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor)
            {
                ILinqToQuerystringVisitor<TResult> typedVisitor = visitor as ILinqToQuerystringVisitor<TResult>;
                if (typedVisitor != null) return typedVisitor.VisitWhereExpression(this);
                else return visitor.VisitChildren(this);
            }
        }

        [RuleVersion(0)]
        public WhereExpressionContext whereExpression()
        {
            WhereExpressionContext _localctx = new WhereExpressionContext(Context, State);
            EnterRule(_localctx, 20, RULE_whereExpression);
            int _la;
            try
            {
                EnterOuterAlt(_localctx, 1);
                {
                    State = 89; whereAtom();
                    State = 94;
                    ErrorHandler.Sync(this);
                    _la = TokenStream.LA(1);
                    while (_la == OR || _la == AND)
                    {
                        {
                            {
                                State = 90;
                                _la = TokenStream.LA(1);
                                if (!(_la == OR || _la == AND))
                                {
                                    ErrorHandler.RecoverInline(this);
                                }
                                else
                                {
                                    ErrorHandler.ReportMatch(this);
                                    Consume();
                                }
                                State = 91; whereAtom();
                            }
                        }
                        State = 96;
                        ErrorHandler.Sync(this);
                        _la = TokenStream.LA(1);
                    }
                }
            }
            catch (RecognitionException re)
            {
                _localctx.exception = re;
                ErrorHandler.ReportError(this, re);
                ErrorHandler.Recover(this, re);
            }
            finally
            {
                ExitRule();
            }
            return _localctx;
        }

        public partial class WhereAtomContext : ParserRuleContext
        {
            public IToken not;
            public BoolExpressionContext boolExpr;
            public WhereExpressionContext whereExpr;
            public BoolExpressionContext boolExpression()
            {
                return GetRuleContext<BoolExpressionContext>(0);
            }
            public WhereExpressionContext whereExpression()
            {
                return GetRuleContext<WhereExpressionContext>(0);
            }
            public ITerminalNode NOT() { return GetToken(LinqToQuerystringParser.NOT, 0); }
            public WhereAtomContext(ParserRuleContext parent, int invokingState)
                : base(parent, invokingState)
            {
            }
            public override int RuleIndex { get { return RULE_whereAtom; } }
            public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor)
            {
                ILinqToQuerystringVisitor<TResult> typedVisitor = visitor as ILinqToQuerystringVisitor<TResult>;
                if (typedVisitor != null) return typedVisitor.VisitWhereAtom(this);
                else return visitor.VisitChildren(this);
            }
        }

        [RuleVersion(0)]
        public WhereAtomContext whereAtom()
        {
            WhereAtomContext _localctx = new WhereAtomContext(Context, State);
            EnterRule(_localctx, 22, RULE_whereAtom);
            int _la;
            try
            {
                EnterOuterAlt(_localctx, 1);
                {
                    State = 98;
                    ErrorHandler.Sync(this);
                    _la = TokenStream.LA(1);
                    if (_la == NOT)
                    {
                        {
                            State = 97; _localctx.not = Match(NOT);
                        }
                    }

                    State = 105;
                    ErrorHandler.Sync(this);
                    switch (TokenStream.LA(1))
                    {
                        case TOUPPER:
                        case TOLOWER:
                        case STARTSWITH:
                        case ENDSWITH:
                        case INT:
                        case LONG:
                        case DOUBLE:
                        case FLOAT:
                        case DECIMAL:
                        case BOOL:
                        case GUID:
                        case NULL:
                        case DATETIME:
                        case STRING:
                        case PROPERTYACCESS:
                            {
                                State = 100; _localctx.boolExpr = boolExpression();
                            }
                            break;
                        case T__8:
                            {
                                State = 101; Match(T__8);
                                State = 102; _localctx.whereExpr = whereExpression();
                                State = 103; Match(T__9);
                            }
                            break;
                        default:
                            throw new NoViableAltException(this);
                    }
                }
            }
            catch (RecognitionException re)
            {
                _localctx.exception = re;
                ErrorHandler.ReportError(this, re);
                ErrorHandler.Recover(this, re);
            }
            finally
            {
                ExitRule();
            }
            return _localctx;
        }

        public partial class BoolExpressionContext : ParserRuleContext
        {
            public AtomContext left;
            public IToken operation;
            public AtomContext right;
            public AtomContext[] atom()
            {
                return GetRuleContexts<AtomContext>();
            }
            public AtomContext atom(int i)
            {
                return GetRuleContext<AtomContext>(i);
            }
            public ITerminalNode EQUALS() { return GetToken(LinqToQuerystringParser.EQUALS, 0); }
            public ITerminalNode NOTEQUALS() { return GetToken(LinqToQuerystringParser.NOTEQUALS, 0); }
            public ITerminalNode GREATERTHAN() { return GetToken(LinqToQuerystringParser.GREATERTHAN, 0); }
            public ITerminalNode GREATERTHANOREQUAL() { return GetToken(LinqToQuerystringParser.GREATERTHANOREQUAL, 0); }
            public ITerminalNode LESSTHAN() { return GetToken(LinqToQuerystringParser.LESSTHAN, 0); }
            public ITerminalNode LESSTHANOREQUAL() { return GetToken(LinqToQuerystringParser.LESSTHANOREQUAL, 0); }
            public BoolExpressionContext(ParserRuleContext parent, int invokingState)
                : base(parent, invokingState)
            {
            }
            public override int RuleIndex { get { return RULE_boolExpression; } }
            public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor)
            {
                ILinqToQuerystringVisitor<TResult> typedVisitor = visitor as ILinqToQuerystringVisitor<TResult>;
                if (typedVisitor != null) return typedVisitor.VisitBoolExpression(this);
                else return visitor.VisitChildren(this);
            }
        }

        [RuleVersion(0)]
        public BoolExpressionContext boolExpression()
        {
            BoolExpressionContext _localctx = new BoolExpressionContext(Context, State);
            EnterRule(_localctx, 24, RULE_boolExpression);
            int _la;
            try
            {
                EnterOuterAlt(_localctx, 1);
                {
                    State = 107; _localctx.left = atom();
                    State = 108;
                    _localctx.operation = TokenStream.LT(1);
                    _la = TokenStream.LA(1);
                    if (!((((_la) & ~0x3f) == 0 && ((1L << _la) & ((1L << EQUALS) | (1L << NOTEQUALS) | (1L << GREATERTHAN) | (1L << GREATERTHANOREQUAL) | (1L << LESSTHAN) | (1L << LESSTHANOREQUAL))) != 0)))
                    {
                        _localctx.operation = ErrorHandler.RecoverInline(this);
                    }
                    else
                    {
                        ErrorHandler.ReportMatch(this);
                        Consume();
                    }
                    State = 109; _localctx.right = atom();
                }
            }
            catch (RecognitionException re)
            {
                _localctx.exception = re;
                ErrorHandler.ReportError(this, re);
                ErrorHandler.Recover(this, re);
            }
            finally
            {
                ExitRule();
            }
            return _localctx;
        }

        public partial class AtomContext : ParserRuleContext
        {
            public PropertyContext property()
            {
                return GetRuleContext<PropertyContext>(0);
            }
            public ConstantContext constant()
            {
                return GetRuleContext<ConstantContext>(0);
            }
            public FunctionContext function()
            {
                return GetRuleContext<FunctionContext>(0);
            }
            public AtomContext(ParserRuleContext parent, int invokingState)
                : base(parent, invokingState)
            {
            }
            public override int RuleIndex { get { return RULE_atom; } }
            public override TResult Accept<TResult>(IParseTreeVisitor<TResult> visitor)
            {
                ILinqToQuerystringVisitor<TResult> typedVisitor = visitor as ILinqToQuerystringVisitor<TResult>;
                if (typedVisitor != null) return typedVisitor.VisitAtom(this);
                else return visitor.VisitChildren(this);
            }
        }
